# real-q-voter

./: .gitignore  .travis.yml  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
docs/: .buildinfo  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  real_q_voter_loader.html  real_q_voter_metrics.html  real_q_voter_opinion.html  real_q_voter_simulation.html  real_q_voter_visualization.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  real_q_voter_metrics.rst.txt  real_q_voter_opinion.rst.txt  real_q_voter_simulation.rst.txt  real_q_voter_visualization.rst.txt
docsrc/: Makefile  conf.py  index.rst  make.bat  real_q_voter_loader.rst  real_q_voter_metrics.rst  real_q_voter_opinion.rst  real_q_voter_simulation.rst  real_q_voter_visualization.rst
results/: network_metrics_table.csv
results/appendix-experiment/: moreno_is_random=False_I=10_directed=False_q=4_N=25390.csv  moreno_is_random=True_I=10_directed=False_q=4_N=25390.csv  moreno_preference_sampling=False_is_random=False_I=15_directed=False_q=4_N=25390.csv  moreno_preference_sampling=False_is_random=False_I=5_directed=False_q=4_N=25390.csv  moreno_preference_sampling=False_is_random=True_I=15_directed=False_q=4_N=25390.csv  moreno_preference_sampling=False_is_random=True_I=5_directed=False_q=4_N=25390.csv  moreno_preference_sampling=True_is_random=False_I=10_directed=False_q=4_N=25390.csv  moreno_preference_sampling=True_is_random=False_I=15_directed=False_q=4_N=25390.csv  test_data.txt  (+4 more)
src/pl/fweis/: Main.java
tests/: test_loader.py  test_metrics.py  test_opinion.py
(+76 files in other folders)
